--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="round-count"> ROUND 1 OF 3 </div>
 <div id="player-turn"> <h5> PLAYER TURN: </h5></div>
 
-<div id="player-scores"> <h5> PLAYER SCORES </h5>
+<div id="player-scores"> <h5> PLAYER SCORES: </h5>
 
 <div id="player1-scores">
  PLAYER 1: <span>  34pt. </span>
