added player points

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <div id="player-scores"> <h5> PLAYER SCORES: </h5>
 
 <div id="player1-scores">
- PLAYER 1: <span>  34pt. </span>
+ PLAYER 1: <span>   </span>
 </div>
 <div id="player2-scores">
- PLAYER 2: <span>  50pt. </span>
+ PLAYER 2: <span>   </span>
 </div>
 </div>
 
