--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <div id="game-board">
 <h1> STUCK IN THE MUD </h1>
 <div id="round-count"> ROUND 1 OF 3 </div>
-<div id="player-turn"> <h5> PLAYER TURN: </h5></div>
+<div id="player-turn"> <h5> PLAYER TURN: </h5> <span> </span></div>
 
 <div id="player-scores"> <h5> PLAYER SCORES: </h5>
 
-<div id="player1-scores">
+<div id="player1-scores" class="scores">
  PLAYER 1: <span>   </span>
 </div>
-<div id="player2-scores">
+<div id="player2-scores" class="scores">
  PLAYER 2: <span>   </span>
 </div>
 </div>
@@ -37,7 +37,7 @@
 </div>
 <br></br>
 
-<div id="current-roll-score"> CURRENT ROLL POINTS: 50pt. </div>
+<div id="current-roll-score"> CURRENT ROLL SCORE: <span></span> </div>
 
 
 <div id="newGame">
