added score count function

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
 <div id="game-board">
 <h1> STUCK IN THE MUD </h1>
-<div id="round-count"> ROUND 1 OF 3 </div>
+<div id="round-count"> ROUND <span> 0 </span> OF 3 </div>
 <div id="player-turn"> <h5> PLAYER TURN: </h5> <span> </span></div>
 
 <div id="player-scores"> <h5> PLAYER SCORES: </h5>
+<div id="winner"> </div>
 
 <div id="player1-scores" class="scores">
  PLAYER 1: <span>   </span>
