--- a/index.html
+++ b/index.html
@@ -1,70 +1,84 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <title>Stuck in the Mud</title>
-   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
-   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.theme.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.theme.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Monofett|Faster+One|Luckiest+Guy|Sigmar+One|Fontdiner+Swanky|Slackey' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="game-board">
-<h1> STUCK IN THE MUD </h1>
-<div id="round-count"> ROUND <span> 0 </span> OF 3 </div>
-<div id="player-turn"> <h5> PLAYER TURN: </h5> <span> </span></div>
+  <div class="container">
+    <div id="game-board">
+      <div class="row">
+        <div id="title" class="col-md-12">
+          <h1> STUCK IN THE MUD </h1>
+        </div>
+      </div>
+      <div class="row">
+        <div id="round-count" class="col-md-12 trackers"> <h3> ROUND <span> 0 </span> OF 3 </h3> </div> 
+        <div id="player-turn" class="col-md-12 trackers"> <h3> PLAYER TURN:  <span> </span> </h3> </div>
+      </div>
 
-<div id="player-scores"> <h5> PLAYER SCORES: </h5>
-<div id="winner"> </div>
+      <div class="row">
+       <div id="winner" class="col-lg-12"> </div>
+      </div>
 
-<div id="player1-scores" class="scores">
- PLAYER 1: <span>   </span>
+      <div class="row">
+        <div id="dice-board" class="col-md-4 col-md-offset-7"> 
+          <div id="die1" class="dice"></div>
+          <div id="die2" class="dice"></div>
+          <div id="die3" class="dice"></div>
+          <div id="die4" class="dice"></div>
+          <div id="die5" class="dice"></div>
+        </div>
+      </div>
+
+
+
+      <div class="row"> 
+        <div id="player-scores"> <h5> PLAYER SCORES: </h5>
+        </div>
+
+        <div class="row">
+          <div id="player1-scores" class="scores">
+           PLAYER 1: <span>   </span>
+         </div>
+       </div>
+
+       <div class="row"> 
+        <div id="player2-scores" class="scores">
+         PLAYER 2: <span>   </span>
+       </div>
+     </div>
+
+     <div id="rollDice">
+      <button class=".btn" type="button" id="roll-dice">Roll Dice</button>
+    </div>
+
+    <br></br>
+
+
+    <br></br>
+
+    <div id="current-roll-score"> CURRENT ROLL SCORE: <span></span> </div>
+
+
+    <div id="newGame">
+      <button class=".btn" type="button" id="new-game">New Game</button>
+    </div>
+
+
+
+
+
+  </div>
 </div>
-<div id="player2-scores" class="scores">
- PLAYER 2: <span>   </span>
-</div>
-</div>
-
-<div id="rollDice">
-<button class=".btn" type="button" id="roll-dice">Roll Dice</button>
- </div>
-
- <br></br>
-
-<div id="dice-board">
-  <div id="die1" class="dice"></div>
-  <div id="die2" class="dice"></div>
-  <div id="die3" class="dice"></div>
-  <div id="die4" class="dice"></div>
-  <div id="die5" class="dice"></div>
-</div>
-<br></br>
-
-<div id="current-roll-score"> CURRENT ROLL SCORE: <span></span> </div>
-
-
-<div id="newGame">
-<button class=".btn" type="button" id="new-game">New Game</button>
- </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</div>
- <!-- loading jQuery UI after lib -->
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<!-- loading jQuery UI after lib -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js">  </script>
-<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> -->
- <script src="script.js"> </script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script src="script1.js"> </script>
 </body>
 </html>
