created how-to page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.theme.min.css">
 
   <link href='https://fonts.googleapis.com/css?family=Monofett|Faster+One|Luckiest+Guy|Sigmar+One|Fontdiner+Swanky|Slackey|Schoolbell|Permanent+Marker|Play:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="file:///Users/emiliegerber/Code/sweetalert-master/dist/sweetalert.css">
 
   <link rel="stylesheet" href="animate.css">
 
@@ -22,7 +23,7 @@
           <ul class="nav">
             <li><h1> STUCK IN THE MUD </h1> </li>
 
-            <li><span class="glyph-span"><a href="#"><span class="glyphicon glyphicon-info-sign pull-right"></span></a></span></li>
+            <li><span class="glyph-span"><a href="howto.html"><span class="glyphicon glyphicon-info-sign pull-right"></span></a></span></li>
           </ul>
         </div>
       </div>
@@ -43,13 +44,13 @@
      <div class="row">
       <div class="container col-lg-6">
        <div class="scores"> <span> PLAYER SCORES: </span> </div>
-       <div id="player1-scores">
-         PLAYER 1: <span class="text-uppercase">   </span>
+       <div id="player1-scores"> <span class="text-uppercase">   </span>
+         <div id="p1"> PLAYER 1:  </div>
        </div>
 
 
-       <div id="player2-scores">
-         PLAYER 2: <span class="text-uppercase">   </span>
+       <div id="player2-scores"> <span class="text-uppercase">   </span>
+         <div id="p2"> PLAYER 2:  </div> 
        </div>
 
        <br></br>
@@ -86,6 +87,7 @@
 <!-- loading jQuery UI after lib  -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js">  </script>
+<script src="file:///Users/emiliegerber/Code/sweetalert-master/dist/sweetalert.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <script src="script1.js"> </script>
 </body>
