--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
     </div>
 
   </div> <!-- ROW CLOSE -->
+  <div class="row">
+  <div class="centerBlock">
+  <div class="col-md-12 centerBlock">   &#169;Emilie Gerber 2016 </div>
+  </div>
+  </div>
 
 </div>
 </div>
