--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link href='https://fonts.googleapis.com/css?family=Monofett|Faster+One|Luckiest+Guy|Sigmar+One|Fontdiner+Swanky|Slackey|Schoolbell|Permanent+Marker|Play:400,700' rel='stylesheet' type='text/css'>
   
-  <link rel="stylesheet" type="text/css" href="file:///Users/emiliegerber/Code/sweetalert-master/dist/sweetalert.css">
+  <link rel="stylesheet" type="text/css" href="sweetalert.css">
 
   <link rel="stylesheet" href="animate.css">
 
@@ -132,7 +132,7 @@
 <!-- loading jQuery UI after lib  -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js">  </script>
-<script src="file:///Users/emiliegerber/Code/sweetalert-master/dist/sweetalert.min.js"></script>
+<script src="sweetalert.min.js"></script>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
