added media queries for responsiveness

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.theme.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
   <link href='https://fonts.googleapis.com/css?family=Monofett|Faster+One|Luckiest+Guy|Sigmar+One|Fontdiner+Swanky|Slackey|Schoolbell|Permanent+Marker|Play:400,700' rel='stylesheet' type='text/css'>
   
   <link rel="stylesheet" type="text/css" href="sweetalert.css">
@@ -60,13 +63,13 @@
 
        <br></br>
        <div id="newGame">
-        <button class="btn btn-default btn-lg " type="button" id="new-game">NEW GAME</button>
+        <button class="btn btn-default btn-lg btn-responsive" type="button" id="new-game">NEW GAME</button>
       </div>
     </div>
 
 
 
-    <div class="container col-lg-6">
+    <div class="container col-lg-6 col-md-8 col-sm-10 col-xs-12">
       <div id="dice-board"> 
         <div id="die1" class="dice"></div>
         <div id="die2" class="dice"></div>
@@ -80,7 +83,7 @@
 
 
       <div id="rollDice" class="text-center">
-        <button class="btn btn-danger btn-lg active" type="button" id="roll-dice"> ROLL DICE</button>
+        <button class="btn btn-danger btn-lg active btn-responsive" type="button" id="roll-dice"> ROLL DICE</button>
       </div>
     </div>
 
