cleaned up white space in script.js

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Stuck in the Mud</title>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.theme.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
   <link href='https://fonts.googleapis.com/css?family=Monofett|Faster+One|Luckiest+Guy|Sigmar+One|Fontdiner+Swanky|Slackey|Schoolbell|Permanent+Marker|Play:400,700' rel='stylesheet' type='text/css'>
@@ -23,7 +24,7 @@
     <div id="game-board">
       <!-- TOP PAGE ROWS  -->
       <div class="row">
-        <div id="title" class="col-md-12">
+        <div id="title" class="col-xs-12 col-md-12">
           <ul class="nav">
             <li><h1> STUCK IN THE MUD </h1> </li>
 
@@ -33,8 +34,8 @@
       </div>
 
       <div class="row">
-        <div id="round-count" class="col-md-12 text-center"> ROUND <span class="text-uppercase"> 0 </span> OF 3 </div> 
-        <div id="player-turn" class="col-md-12 text-center"> PLAYER TURN:  <span class="text-uppercase"> </span> </div>
+        <div id="round-count" class="col-xs-12 col-md-12 text-center"> ROUND <span class="text-uppercase"> 0 </span> OF 3 </div> 
+        <div id="player-turn" class="col-xs-12 col-md-12 text-center"> PLAYER TURN:  <span class="text-uppercase"> </span> </div>
       </div>
       
       <br>
@@ -42,11 +43,11 @@
       <br>
 
       <div class="row">
-       <div id="winner" class="col-lg-12 text-uppercase"> </div>
+       <div id="winner" class="col-xs-12 col-lg-12 text-uppercase"> </div>
      </div>
 
      <div class="row">
-      <div class="container col-lg-6">
+      <div class="container col-xs-6 col-lg-6">
        <div class="scores"> <span> PLAYER SCORES: </span> </div>
 
        <div>
@@ -69,7 +70,7 @@
 
 
 
-    <div class="container col-lg-6 col-md-8 col-sm-10 col-xs-12">
+    <div class="container col-xs-12 col-sm-12 col-md-6 col-lg-6">
       <div id="dice-board"> 
         <div id="die1" class="dice"></div>
         <div id="die2" class="dice"></div>
@@ -90,7 +91,7 @@
   </div> <!-- ROW CLOSE -->
   <div class="row">
   <div class="centerBlock">
-  <div class="col-md-12 centerBlock">   &#169;Emilie Gerber 2016 </div>
+  <div class="ol-xs-12 col-md-12 centerBlock">   &#169;Emilie Gerber 2016 </div>
   </div>
   </div>
 
