--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
             </div><!-- ROW CLOSE -->
             <div class="row">
                 <div class="centerBlock">
-                    <div class="col-xs-12 col-md-12 centerBlock">
-                        &#169;Emilie Gerber 2016
+                    <div class=" col-md-4 col-md-offset-4">
+                        <p>&#169;Emilie Gerber 2016</p>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
+        </div> <!-- gameboard closes -->
+    </div> <!-- container closes -->
     <div class="modal fade" id="myModal" role="dialog" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
