removed footer temporarily

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
             </div><!-- ROW CLOSE -->
             <div class="row">
                 <div class="centerBlock">
-                    <div class=" col-md-4 col-md-offset-4">
+<!--                     <div class="col-md-4 col-md-offset-4 col-sm-6">
                         <p>&#169;Emilie Gerber 2016</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div> <!-- gameboard closes -->
